# MCPContentSearch

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.agents/docs/: architecture.md  functional-smoke-matrix.md  github-workflow.md  harness-engineering.md
api/: tools.py
core/: exceptions.py  models.py  utils.py
docs/: contextwiki-core-understanding.md
docs/plan/: 2026-05-20-contextwiki-mvp-a.md  2026-05-20-contextwiki-roadmap.md  2026-05-20-mcp-harness-structure.md  2026-05-22-branch-workflow-docs.md  2026-05-22-contextwiki-phase-b-connectors.md  2026-05-22-contextwiki-phase-b0-readiness.md  2026-05-22-roadmap-hij-review.md  2026-05-24-contextwiki-core-understanding-note.md  2026-05-24-contextwiki-phase-c-auto-wiki.md  2026-05-24-harness-subagent-orchestration.md  2026-05-25-agents-ceo-orchestration.md  2026-05-25-contextwiki-phase-c5-web-console.md  2026-05-25-web-console-source-sync.md  2026-05-27-web-console-answer-cleanup.md  2026-05-27-web-console-codex-answer-mode.md  2026-05-28-web-console-answer-empty-state.md  2026-05-28-web-console-auto-sync-sources.md  2026-05-31-harness-functional-smoke-gate.md  2026-05-31-project-improvement-sweep.md  README.md
environments/: config.py  runtime_env.py  token.py
evals/: README.md  __init__.py  answer_quality.py  answer_quality_cases.json
fetching/: connectors.py  fetcher.py  github.py  notion.py  tistory.py  web_docs.py  web_media.py  web_safety.py  web_searcher.py
indexing/: background_tasks.py  chunker.py  converter.py  indexer.py  ingestion_service.py  manager.py
posts/: github.py  notion.py  tistory.py
scripts/: smoke_generate_wiki_page.py  verify_all.sh
search/: answer_service.py  context_service.py  dynamic_search.py  service.py
storage/: __init__.py  metadata_store.py
tests/: test_notion.py  test_tistory.py
tests/api/: test_tools_contract.py
tests/e2e/: test_contextwiki_flow.py  test_phase_b_connectors_flow.py
tests/environments/: test_config.py
tests/evals/: test_answer_quality.py
tests/fetching/: test_connectors.py  test_github.py  test_notion.py  test_tistory.py  test_web_docs.py
tests/indexing/: test_background_tasks.py  test_chunker.py  test_index_manager.py  test_indexer_redaction.py  test_ingestion_service.py
tests/scripts/: test_smoke_generate_wiki_page.py
tests/search/: test_answer_service.py  test_context_service.py  test_service.py
tests/storage/: test_metadata_store.py
tests/web_console/: test_app.py
tests/wiki/: test_wiki_service.py  test_wiki_synthesis.py
web/: app.js  index.html  styles.css
web_console/: __init__.py  app.py  codex_cli.py  payloads.py
wiki/: __init__.py  service.py  synthesis.py
(+25 files in other folders)
