[project]
name = "myMcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.2.1",
    "langchain>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "llama-index>=0.9.48",
    "llama-index-vector-stores-chroma>=0.5.3",
    "mcp[cli]>=1.19.0",
    "openai>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.uv.workspace]
members = [
    "myMcp",
]

[tool.pytest.ini_options]
markers = [
    "unit: pure unit tests",
    "integration: service integration tests without live external APIs",
    "e2e: deterministic end-to-end tests using fake sources",
    "live: opt-in live external API smoke tests",
]
