[project]
name = "mcp-content-search"
version = "0.1.0"
description = "FastMCP content search server with ContextWiki retrieval and wiki generation."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=1.2.1",
    "certifi>=2024.2.2",
    "fastapi>=0.136.3",
    "httpx>=0.27.0",
    "llama-index>=0.14.22",
    "llama-index-core>=0.14.22",
    "llama-index-vector-stores-chroma>=0.5.3",
    "mcp[cli]>=1.19.0",
    "numpy>=1.26.0",
    "openai>=2.6.1",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]
markers = [
    "unit: pure unit tests",
    "integration: service integration tests without live external APIs",
    "e2e: deterministic end-to-end tests using fake sources",
    "live: opt-in live external API smoke tests",
]
